--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "build": "tsc",
     "start": "yarn build && node dist/src/index.js",
-    "start:dev":"ts-node-dev 'src/index.ts'",
+    "start:dev": "ts-node-dev 'src/index.ts'",
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:functional": "jest --projects ./test --runInBand"
   },
   "repository": {
     "type": "git",
@@ -22,11 +23,16 @@
   },
   "homepage": "https://github.com/DanielMarquesz/weather-api#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.0",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.4.13",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "eslint": "^7.32.0",
+    "jest": "^27.0.6",
+    "supertest": "^6.1.5",
+    "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   },
