--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:functional": "jest --projects ./test --runInBand"
+    "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
+    "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
+    "test:functional": "jest --projects ./test --forceExit --runInBand"
   },
   "repository": {
     "type": "git",
@@ -22,21 +24,26 @@
     "url": "https://github.com/DanielMarquesz/weather-api/issues"
   },
   "homepage": "https://github.com/DanielMarquesz/weather-api#readme",
-  "devDependencies": {
-    "@types/jest": "^27.0.0",
-    "@types/module-alias": "^2.0.1",
-    "@types/node": "^16.4.13",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "eslint": "^7.32.0",
-    "jest": "^27.0.6",
-    "supertest": "^6.1.5",
-    "ts-jest": "^27.0.4",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5"
-  },
   "dependencies": {
+    "@overnightjs/core": "^1.7.4",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "module-alias": "^2.2.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.1",
+    "@types/module-alias": "^2.0.0",
+    "@types/node": "^13.13.2",
+    "@types/supertest": "^2.0.9",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
+    "eslint": "^6.8.0",
+    "jest": "^26.0.1",
+    "prettier": "^2.3.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.0.0",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
   }
 }
