--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "lint": "eslint ./src ./test --ext .ts",
     "lint:fix": "eslint ./src ./test --ext .ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "style:check": "prettier --check 'src/**/*.ts' 'test/**/*.ts'",
+    "style:fix": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "test:functional": "jest --projects ./test --forceExit --runInBand"
-  },
-  "engines": {
-    "node": "12"
   },
   "repository": {
     "type": "git",
@@ -41,6 +40,7 @@
     "@typescript-eslint/parser": "^2.29.0",
     "eslint": "^6.8.0",
     "jest": "^26.0.1",
+    "prettier": "^2.3.2",
     "supertest": "^4.0.2",
     "ts-jest": "^26.0.0",
     "ts-node-dev": "^1.0.0-pre.44",
